--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <junit.version>5.4.0</junit.version>
         <java.version>11</java.version>
+        <logger.version>2.11.2</logger.version>
     </properties>
 
     <dependencies>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.2</version>
+            <version>${logger.version}</version>
         </dependency>
 
     </dependencies>
